--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@
     
     <body style="background-color: antiquewhite">
         <center>
-           <form action="" method="post">
+           <form action=" " method="post">
                <p style="font-size: 50pt;font-style: italic">New Login</p>
                <div><b>
                    Enter your First name:
@@ -13,6 +13,9 @@
                    <br> <br>
                    Enter your Last name:
                    <input type="text" placeholder="lastname">
+                   <br> <br>
+                   Enter your email:
+                   <input type="text" placeholder="email">
                    <br> <br>
                   Enter your Password:
                    <input type="text" placeholder="Password">
